--- a/src/Pages/Home/css/styles.css
+++ b/src/Pages/Home/css/styles.css
@@ -187,7 +187,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(calc(120px + 2vw), 1fr));
   width: 80dvw;
-  margin-left: 10dvw !important;
   gap: 25px;
   margin-bottom: 20vh;
 }
@@ -224,9 +223,10 @@
 .cards-container {
   display: grid;
   width: 90%;
+  justify-content: center;
+  align-items: center;
   gap: 30px;
-  margin-left: 5%;
-  grid-template-columns: repeat(auto-fill, minmax(calc(300px + 2vw), 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(calc(270px + 2vw), 1fr));
   margin-bottom: 20vh;
 }
 .cards-container h2 {
@@ -234,6 +234,13 @@
 }
 
 .home {
+  position: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden !important;
+  width: 100%;
   transition-duration: 500ms !important;
 }
 
@@ -244,7 +251,6 @@
   .carousel {
     min-width: 90% !important;
     padding: 0 !important;
-    margin: 0 5% !important;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
