--- a/src/Pages/Products/css/styles.css
+++ b/src/Pages/Products/css/styles.css
@@ -261,4 +261,20 @@
   justify-content: center;
   align-items: center;
   background-color: var(--loading-bg);
+}
+
+@media (max-width: 768px) {
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  .filter {
+    flex-direction: column-reverse;
+  }
 }/*# sourceMappingURL=styles.css.map */
