--- a/src/Pages/Products/css/styles.scss
+++ b/src/Pages/Products/css/styles.scss
@@ -326,4 +326,19 @@
     }
 }
 
-//
+///* ==== ANIMATION ADJUSTMENTS FOR MOBILE ==== */
+@media (max-width: 768px) {
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateY(10px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+    .filter{
+        flex-direction: column-reverse;
+    }
+}
