--- a/src/Pages/Home/css/styles.scss
+++ b/src/Pages/Home/css/styles.scss
@@ -166,6 +166,8 @@
 .dot {
     width: 14px;
     height: 14px;
+    margin: 5px 0;
+
     border-radius: 50%;
     border: none;
     background: #bfc9db;
@@ -346,7 +348,7 @@
     }
 
     .dot {
-        width: 10px;
-        height: 10px;
+        width: 15px;
+        height: 15px;
     }
 }
